--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. src/ && eslint --ignore-path .gitignore src/",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. src/",
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
@@ -12,8 +14,13 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "autoprefixer": "^10.4.2",
     "daisyui": "^1.22.2",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.4.0",
     "postcss": "^8.4.5",
     "postcss-load-config": "^3.1.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
