Fix github actions yml

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -6,13 +6,17 @@ on:
       - 'master'
 
 jobs:
-- name: Build app
-  run: |
-    npm install
-    npm run build
-- name: Deploy with gh-pages
-  run: |
-    git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-    npx gh-pages -d public -u "github-actions-bot <support+actions@github.com>"
-   env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build app
+        run: |
+          npm install
+          npm run build
+      - name: Deploy with gh-pages
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npx gh-pages -d public -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
