--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^4.10.1",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "sirv-cli": "^2.0.0"
