--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build app
         run: |
-          npm install
-          npm run build
+          pnpm install
+          pnpm run build
       - name: Deploy with gh-pages
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
