--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build app
         run: |
+          corepack enable
           pnpm install
           pnpm run build
       - name: Deploy with gh-pages
